--- a/Public/SWE-App.html
+++ b/Public/SWE-App.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
-    <title>Emscripten-Generated Code</title>
+    <title>TUM SWE App</title>
+    <link rel="icon" type="image/jpeg" href="https://hfph.de/studieninteressierte/modulstudien-philosophie-tum/tum_logo.png/@@images/image.jpeg">
     <style>
       body { margin: 0; background-color: black }
       .app {
