--- a/Public/SWE-App.html
+++ b/Public/SWE-App.html
@@ -1,58 +1,1 @@
-<!doctype html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
-    <title>TUM SWE App</title>
-    <link rel="icon" type="image/jpeg" href="https://hfph.de/studieninteressierte/modulstudien-philosophie-tum/tum_logo.png/@@images/image.jpeg">
-    <style>
-      body { margin: 0; background-color: black }
-      .app {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        margin: 0px;
-        border: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        display: block;
-        image-rendering: optimizeSpeed;
-        image-rendering: -moz-crisp-edges;
-        image-rendering: -o-crisp-edges;
-        image-rendering: -webkit-optimize-contrast;
-        image-rendering: optimize-contrast;
-        image-rendering: crisp-edges;
-        image-rendering: pixelated;
-        -ms-interpolation-mode: nearest-neighbor;
-      }
-    </style>
-  </head>
-  <body>
-    <canvas class="app" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
-    <script type='text/javascript'>
-      var Module = {
-        preRun: [],
-        print: (() => {
-          return function(text) {
-            text = Array.prototype.slice.call(arguments).join(' ');
-            console.log(text);
-          };
-        })(),
-        printErr: function(text) {
-          text = Array.prototype.slice.call(arguments).join(' ');
-          console.error(text);
-        },
-        canvas: (() => {
-          var canvas = document.getElementById('canvas');
-          canvas.addEventListener("webglcontextlost", (e) => { alert('WebGL context lost. You will need to reload the page.'); e.preventDefault(); }, false);
-          return canvas;
-        })(),
-      };
-      window.onerror = function(event) {
-        console.log("onerror: " + event.message);
-      };
-    </script>
-    <script async type="text/javascript" src="SWE-App.js"></script>
-  </body>
-</html>
+<!doctypehtml><html lang=en-us><head><meta charset=utf-8><meta content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"name=viewport><title>Emscripten-Generated Code</title><style>body{margin:0;background-color:#000}.app{position:absolute;top:0;left:0;margin:0;border:0;width:100%;height:100%;overflow:hidden;display:block;image-rendering:optimizeSpeed;image-rendering:-moz-crisp-edges;image-rendering:-o-crisp-edges;image-rendering:-webkit-optimize-contrast;image-rendering:optimize-contrast;image-rendering:crisp-edges;image-rendering:pixelated;-ms-interpolation-mode:nearest-neighbor}</style></head><body><canvas class=app id=canvas oncontextmenu=event.preventDefault()></canvas><script>var Module={preRun:[],print:function(e){e=Array.prototype.slice.call(arguments).join(" "),console.log(e)},printErr:function(e){e=Array.prototype.slice.call(arguments).join(" "),console.error(e)},canvas:(()=>{var e=document.getElementById("canvas");return e.addEventListener("webglcontextlost",(e=>{alert("WebGL context lost. You will need to reload the page."),e.preventDefault()}),!1),e})()};window.onerror=function(e){console.log("onerror: "+e.message)}</script><script async src=SWE-App.js></script></body></html>
